--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "dark" # "default", "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "K. H. Kim's Note"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "K. H. Kim"
 description              : "An amazing website."
 url                      : "https://imkhkim.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
