--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "K. H. Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "imkhkim.github.io"
+  location         : "Republic of Korea"
   email            :
   links:
     - label: "Email"
