--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
       url: "mailto:sizhf1231@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://imkhkim.github.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
@@ -124,7 +124,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/imkhkim/"
+      url: "github.com/imkhkim/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -140,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/imkhkim/"
+      url: "github.com/imkhkim/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
