--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+      icon: "fas fa-fw fa-github"
       url: "github.com/imkhkim/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
