--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hello Developers"
   location         : "Republic of Korea"
-  email            : "sizhf1231@gmail.com
+  email            : "sizhf1231@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -123,7 +123,7 @@ author:
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
-      icon: "fas fa-fw fa-github"
+      icon: "fab fa-fw fa-github"
       url: "github.com/imkhkim/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
@@ -133,7 +133,7 @@ author:
 footer:
   links:
     - label: "Email"
-      icon: "fab fa-fw fa-envelope-square"
+      icon: "fas fa-fw fa-envelope-square"
       url: "mailto:sizhf1231@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
