--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
       url: "mailto:sizhf1231@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://imkhkim.github.io/"
+      # url: "https://imkhkim.github.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
