--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "K. H. Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Hello, Developers!<br/>I'm K. H. Kim."
+  bio              : "I'm K. H. Kim."
   location         : "Republic of Korea"
   email            : # ""
   links:
