--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: ("https://github.com/imkhkim/"){:target="_blank"}
+      url: "https://github.com/imkhkim/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:sizhf1231@gmail.com"
